--- a/index.html
+++ b/index.html
@@ -183,7 +183,9 @@
 					</div>
 					<div class="block-holder">
 						<div class="portfolio-item">
-							<img src="images/tor-example3.png" class="img-responsive" width="330" alt="Example 1" />
+							<a href="http://tor-company.com.ua/" class="portfolio-item-link">
+								<img src="images/tor-example3.png" class="img-responsive" width="330" alt="Example 1" />
+							</a>
 							<div class="caption">
 								<h4>Consulting company site</h4>
 								<div class="text">
@@ -202,7 +204,9 @@
 							</div>
 						</div>
 						<div class="portfolio-item">
-							<img src="images/bimbim-example3.png" class="img-responsive" width="330" alt="Example 1" />
+							<a href="http://bimbim.ua/" class="portfolio-item-link">
+								<img src="images/bimbim-example3.png" class="img-responsive" width="330" alt="Example 1" />
+							</a>
 							<div class="caption">
 								<h4>Landing</h4>
 								<div class="text">
@@ -217,7 +221,9 @@
 							</div>
 						</div>
 						<div class="portfolio-item">
-							<img src="images/nosock-example.png" class="img-responsive" width="330" alt="Example 1" />
+							<a href="projects/nosock/nosock.html" class="portfolio-item-link">
+								<img src="images/nosock-example.png" class="img-responsive" width="330" alt="Example 1" />
+							</a>
 							<div class="caption">
 								<h4>Graduation markup project</h4>
 								<div class="text">
@@ -230,7 +236,9 @@
 							</div>
 						</div>
 						<div class="portfolio-item">
-							<img src="images/brillius-example.png" class="img-responsive" width="330" alt="Example 1" />
+							<a href="projects/brillius/brillius.html" class="portfolio-item-link">
+								<img src="images/brillius-example.png" class="img-responsive" width="330" alt="Example 1" />
+							</a>
 							<div class="caption">
 								<h4>Graduation markup project</h4>
 								<div class="text">
@@ -245,7 +253,9 @@
 					</div>
 					<div class="block-holder">
 						<div class="portfolio-item">
-							<img src="images/modest-example.png" class="img-responsive" width="330" alt="Example 1" />
+							<a href="projects/modest/modest.html" class="portfolio-item-link">
+								<img src="images/modest-example.png" class="img-responsive" width="330" alt="Example 1" />
+							</a>
 							<div class="caption">
 								<h4>Training project</h4>
 								<div class="text">
@@ -258,7 +268,9 @@
 							</div>
 						</div>
 						<div class="portfolio-item">
-							<img src="images/shophia-example.png" class="img-responsive" width="330" alt="Example 1" />
+							<a href="projects/shophia/shophia.html" class="portfolio-item-link">
+								<img src="images/shophia-example.png" class="img-responsive" width="330" alt="Example 1" />
+							</a>
 							<div class="caption">
 								<h4>Training project</h4>
 								<div class="text">
@@ -271,7 +283,9 @@
 							</div>
 						</div>
 						<div class="portfolio-item">
-							<img src="images/smak-example.png" class="img-responsive" width="330" alt="Example 1" />
+							<a href="projects/smak/smak.html" class="portfolio-item-link">
+								<img src="images/smak-example.png" class="img-responsive" width="330" alt="Example 1" />
+							</a>
 							<div class="caption">
 								<h4>Training project</h4>
 								<div class="text">
@@ -284,7 +298,9 @@
 							</div>
 						</div>
 						<div class="portfolio-item">
-							<img src="images/email-example2.png" class="img-responsive" width="330" alt="Example 1" />
+							<a href="projects/email/email-school.html" class="portfolio-item-link">
+								<img src="images/email-example2.png" class="img-responsive" width="330" alt="Example 1" />
+							</a>
 							<div class="caption">
 								<h4>Email markup</h4>
 								<a class="portfolio-link" href="projects/email/email-school.html" target="_blank" title="View More">View More</a>
